<resources>
    <string name="app_name">Brain Games</string>
    <string name="choose_difficulty">Please select your difficulty level:</string>
    <string name="beginner_btn">Beginner</string>
    <string name="intermediate_btn">Intermediate</string>
    <string name="advance_btn">Advanced</string>
    <string name="sub_ans">Check Answer</string>
    <string name="calc">Calculate the value of:</string>
    <string name="start_btn">Start!</string>
    <string name="correct_incorrect">0 Correct, 0 Incorrect</string>
    <string name="timer">0:00</string>
    <string name="results">\"You answered 0 out of 0 questions correctly in 60 seconds!</string>
    <string name="prob">4 + 6 = ?</string>
</resources>
