<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intermediate">

    <Button
        android:id="@+id/ans_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sub_ans"
        android:visibility="gone" />

    <EditText
        android:id="@+id/user_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ans_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:visibility="gone" />

    <TextView
        android:id="@+id/calc"
        android:layout_width="334dp"
        android:layout_height="42dp"
        android:layout_above="@id/Problem"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/calc"
        android:textSize="22sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/Problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/user_ans"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="50dp"
        android:text="@string/prob"
        android:textSize="30sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/start"
        android:layout_width="147dp"
        android:layout_height="88dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start_btn"
        android:visibility="visible" />

    <TextView
        android:id="@+id/num_correct"
        android:layout_width="254dp"
        android:layout_height="44dp"
        android:layout_alignTop="@id/timer"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toRightOf="@id/timer"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/correct_incorrect"
        android:textSize="24sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:includeFontPadding="false"
        android:text="@string/timer"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/results"
        android:textSize="24sp"
        android:visibility="gone" />

</RelativeLayout>