<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center_vertical|clip_horizontal"
    tools:context=".difficulty_choice">

    <Button
        android:id="@+id/adv_btn"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/int_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="100dp"
        android:onClick="newAdvGame"
        android:text="@string/advance_btn" />

    <Button
        android:id="@+id/int_btn"
        android:layout_width="223dp"
        android:layout_height="45dp"
        android:layout_below="@id/beg_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:foregroundGravity="center_horizontal"
        android:onClick="newIntGame"
        android:text="@string/intermediate_btn" />

    <TextView
        android:id="@+id/difficulty_message"
        android:layout_width="322dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/choose_difficulty"
        android:textSize="20sp" />

    <Button
        android:id="@+id/beg_btn"
        android:layout_width="223dp"
        android:layout_height="45dp"
        android:layout_below="@id/difficulty_message"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="newBegGame"
        android:text="@string/beginner_btn" />
</RelativeLayout>